update css, fix magins/sizes on smaller windows

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-  position: relative;
+  /*position: relative;*/
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
@@ -7,12 +7,59 @@
   box-sizing: border-box;
 }
 
-/* For devices larger than 400px */
-@media (min-width: 400px) {
+.container article {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+/* For iPhone */
+@media (min-width: 320px) {
   .container {
     width: 85%;
     padding: 0;
   }
+  
+  header {
+    height: 35px;
+    margin-top: 20px;
+  }
+  
+  footer {
+    margin-bottom: 20px;
+  }
+  
+  header h1 {
+    font-size: 1.5em;
+  }
+  
+  header h2 {
+    font-size: 1em;
+    line-height: 2.18em;
+  }
+  
+  article {
+    margin-top: 50px;
+  }
+  
+  footer {
+    margin: 30px auto 0 auto;
+  }
+  
+  nav {
+    display: none;
+  }
+  
+  nav.index {
+    display: block;
+    clear: none;
+    float: left;
+  }
+
+  nav.index ul {
+    margin: 0;
+  }
+
 }
 
 /* For devices larger than 550px */
@@ -30,12 +77,71 @@ body {
     padding-bottom: 50px;
     transition: 0.5s;
   }
-  article {
-    margin-top: 50px;
+  nav {
+    height: 20px;
+    display: block;
+  }
+  
+  article p,
+  article h1,
+  article h2,
+  article h3,
+  article blockquote,
+  article aside,
+  article iframe,
+  article ul,
+  article .MathJax_Display,
+  article pre,
+  article ol {
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+  header h1 {
+    font-size: 2em;
+  }
+  
+  header h2 {
+    font-size: 1.25em;
+    line-height: 2.45em;
+  }
+  
+  nav.index {
+    display: block;
+    clear: both;
+    float: none;
+  }
+
+  nav.index ul {
+    margin: inherit;
   }
 }
 
-@media (min-width: 1000px) {
+article .thumbnail {
+  transition: 0.5s;
+}
+
+@media (min-width: 100px) {
+  article .thumbnail {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (min-width: 700px) {
+  article .thumbnail {
+    width: 23%;
+    height: 23%;
+  }
+}
+
+@media (min-width: 953px) {
+  article .thumbnail {
+    width: 32%;
+    height: 32%;
+  }
+}
+
+@media (min-width: 1220px) {
   body {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -44,6 +150,34 @@ body {
   article {
     margin-top: 100px;
     max-width: 960px;
+  }
+  
+  article .thumbnail {
+    width: 310px;
+    height: 310px;
+  }
+  
+  nav {
+    height: 20px;
+  }
+  
+  footer {
+    margin: 60px auto 0 auto;
+  }
+  
+  article p,
+  article h1,
+  article h2,
+  article h3,
+  article blockquote,
+  article aside,
+  article iframe,
+  article ul,
+  article .MathJax_Display,
+  article pre,
+  article ol {
+    margin-top: 0;
+    margin-bottom: 40px;
   }
 }
 
@@ -61,7 +195,6 @@ header h1 {
   font-family: 'Roboto', sans-serif;
   float: left;
   margin: 0;
-  font-size: 2em;
   font-weight: 600;
   letter-spacing: 0;
 }
@@ -73,12 +206,14 @@ header h2 {
   float: left;
   margin: 0;
   margin-left: 0.5em;
-  font-size: 1.25em;
-  line-height: 2.45em;
 }
 
 header h2:lang(ar) {
   font-family: 'Amiri', serif;
+}
+
+nav {
+  clear: both;
 }
 
 nav ul {
@@ -133,21 +268,6 @@ article {
 
 article p {
   line-height: 1.5em;
-}
-
-article p,
-article h1,
-article h2,
-article h3,
-article blockquote,
-article aside,
-article iframe,
-article ul,
-article .MathJax_Display,
-article pre,
-article ol {
-  margin-top: 0;
-  margin-bottom: 40px;
 }
 
 article aside {
@@ -319,12 +439,10 @@ article a.noline:hover {
 }
 
 footer {
-  padding-top: 1em;
   font-size: 0.5em;
   color: #eee;
   text-align: center;
   width: 100%;
-  margin: 10em auto 0 auto;
   display: inline-block;
   clear: both;
 }
